# Lab_2_cpp

./: CMakeLists.txt
Lab_2_cpp/: CMakeLists.txt  Lab_2_cpp.cpp  Lab_2_cpp.h
