# CMakeList.txt: проект CMake для Lab_2_cpp; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Lab_2_cpp "Lab_2_cpp.cpp" "Lab_2_cpp.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
